<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/tblControls"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="20">
        <TableRow>
            <EditText
                android:id="@+id/txtLoginUserName"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login_user"
                android:autofillHints="@string/login_user"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/txtLoginPassword"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_pwd"
                android:autofillHints="@string/login_pwd"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="4"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:text="@string/login_service"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/spLoginService"
                android:layout_weight="10"
                android:layout_height="48dp"
                android:layout_width="0dp"/>
            <Spinner
                android:id="@+id/spLoginLanguage"
                android:layout_weight="5"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:entries="@array/open_caching_locale"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/ivLoginTest"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:contentDescription="@string/login_test"
                app:srcCompat="@drawable/ic_close_black_24dp"/>
            <Button
                android:id="@+id/cmdLoginTest"
                android:layout_weight="18"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/login_test"
                android:contentDescription="@string/login_test"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/txtLoginAddress"
                android:layout_weight="18"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="textPostalAddress"
                android:hint="@string/login_address"
                android:autofillHints="@string/login_address"/>
            <ImageButton
                android:id="@+id/cmdLoginAddress"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_location_searching_black_24dp"
                android:contentDescription="@string/login_home"
                android:background="@null"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/txtLoginLongitude"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                android:hint="@string/geo_longitude"
                android:autofillHints="@string/geo_longitude"/>
            <EditText
                android:id="@+id/txtLoginLatitude"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                android:hint="@string/geo_latitude"
                android:autofillHints="@string/geo_latitude"/>
            <ImageButton
                android:id="@+id/cmdLoginPosition"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_my_location_black_24dp"
                android:contentDescription="@string/login_home"
                android:background="@null"/>
        </TableRow>
    </TableLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/mvLoginHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tblControls"
        android:layout_above="@+id/cmdLoginSave"/>
    
    <ImageButton
        android:id="@+id/cmdLoginSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:padding="3dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/sys_save"
        android:background="@null"/>
</RelativeLayout>